Fixed conclusion in older MA sutras

--- a/01_agama/madhyama/MA_042.md
+++ b/01_agama/madhyama/MA_042.md
@@ -73,7 +73,7 @@ The Bhagavān replied, “Ānanda, the lack of desire has the purpose of causing
 14\. “Ānanda, these are the mutual advantages going from one thing to another and the mutual causes going from one thing to another. In this way, the observance of precepts leads to what’s supreme, which is to cross over from this shore to the other shore.”
 {: #p14}
 
-15\. The Buddha spoke thus. The Venerable Ānanda and the monks who heard what the Buddha had taught rejoiced and approved.
+15\. This is what the Buddha said. The Venerable Ānanda and the monks who heard what the Buddha had taught rejoiced and approved.
 {: #p15}
 
 ---
