--- a/01_agama/madhyama/MA_043.md
+++ b/01_agama/madhyama/MA_043.md
@@ -53,7 +53,7 @@ next: MA_044.html
 14\. “Ānanda, these are the mutual advantages going from one thing to another and the mutual causes going from one thing to another. In this way, the precepts lead to what’s supreme, which is to cross over from this shore to the other shore.”
 {: #p14}
 
-15\. The Buddha spoke thus. Venerable Ānanda and the monks who heard what the Buddha taught rejoiced and approved.
+15\. This is what the Buddha said. Venerable Ānanda and the monks who heard what the Buddha taught rejoiced and approved.
 {: #p15}
 
 ---
