--- a/01_agama/madhyama/MA_045.md
+++ b/01_agama/madhyama/MA_045.md
@@ -20,7 +20,7 @@ next: MA_046.html
 3\. “If a monk has conscience and modesty, he readily cultivates affection and respect. If he has affection and respect, he readily cultivates faith. If he has faith, he readily cultivates right thinking. If he has right thinking, he readily cultivates right mindfulness and right knowledge. If he has right mindfulness and right knowledge, he readily cultivates guarding his faculties … guarding the precepts … having no regrets … gladness … joy … calmness … happiness … samādhi … true seeing and true knowing … disenchantment … lack of desire … liberation. If he has liberation, he readily cultivates nirvāṇa.”
 {: #p3}
 
-4\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+4\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p4}
 
 ---
