--- a/01_agama/madhyama/MA_051.md
+++ b/01_agama/madhyama/MA_051.md
@@ -123,7 +123,7 @@ They answered, “Good people are its cultivation.”
 24\. “Being with good people, one readily associates with good friends. Having associated with good friends, one readily hears the good teaching. Having heard the good teaching, one readily has faith. Faith having arisen, one readily has right thinking. Having right thinking, one readily has right mindfulness and right knowledge. Having right mindfulness and right knowledge, one readily has guarded faculties. Having guarded faculties, one readily has the three marvelous conducts. Having the three marvelous conducts, one readily has the four abodes of mindfulness. Having the four abodes of mindfulness, one readily has the seven factors of awakening. Having the seven factors of awakening, one readily has insight and liberation. In this way, insight and liberation develops and becomes fully formed.”
 {: #p24}
 
-25\. The Buddha spoke thus. Those monks who had heard what the Buddha taught rejoiced and approved.
+25\. This is what the Buddha said. Those monks who had heard what the Buddha taught rejoiced and approved.
 {: #p25}
 
 ---
