--- a/01_agama/madhyama/MA_058.md
+++ b/01_agama/madhyama/MA_058.md
@@ -20,7 +20,7 @@ next: MA_072.html
 3\. “In the same way, when the Tathāgata, the Arhat and Completely Awakened One, arises in the world, you should know that seven factor of awakening treasures arise in the world, too. What are the seven? The awakening factor treasure of mindfulness … awakening factor of discerning qualities … awakening factor of effort … awakening factor of joy … awakening factor of calm … awakening factor of samādhi …  awakening factor treasure of equanimity. When the Tathāgata, the Arhat and Completely Awakened One, arises in the world, you should know that these seven factor of awakening treasures arise in the world, too.”
 {:#p3}
 
-4\. The Buddha spoke thus. Those monks who heard what the Buddha had taught rejoiced and approved.
+4\. This is what the Buddha said. Those monks who heard what the Buddha had taught rejoiced and approved.
 {:#p4}
 
 ---
