--- a/01_agama/madhyama/MA_072.md
+++ b/01_agama/madhyama/MA_072.md
@@ -618,7 +618,7 @@ Venerable Kimbila said, “Bhagavān, I am doing well. There isn’t anything th
 161\. “I gave rise to knowing and seeing a full and bright purity, headed for a certain abode, and diligently cultivated the factors of the path. I truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ Aniruddha, at that point I practiced in this way.”
 {: #p161}
 
-162\. The Buddha spoke thus. When Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila heard what the Buddha taught, they rejoiced and approved.
+162\. This is what the Buddha said. When Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila heard what the Buddha taught, they rejoiced and approved.
 {: #p162}
 
 ---
