--- a/01_agama/madhyama/MA_073.md
+++ b/01_agama/madhyama/MA_073.md
@@ -86,7 +86,7 @@ next: MA_074.html
 19\. “If I rightly knew and attained these eight practices, then I could thoroughly declare their attainment. I knew I had awakened to the unsurpassed and correct awakening. I had gone beyond this world’s gods, Māra, Brahmā, ascetics, and priests. I was liberated by various liberations. My mind was free of delusions. I also truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’”
 {: #p19}
 
-20\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+20\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p20}
 
 ---
