--- a/01_agama/madhyama/MA_077.md
+++ b/01_agama/madhyama/MA_077.md
@@ -198,7 +198,7 @@ Aniruddha and the others accepted the teaching and listened.
 40\. “Aniruddha, it’s for this purpose that the Tathāgata relates that a disciple whose life ended had ‘a certain birth in a certain place, a certain birth in a certain place.’”
 {: #p40}
 
-41\. The Buddha spoke thus. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and approved.
+41\. This is what the Buddha said. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and approved.
 {: #p41}
 
 ---
