--- a/01_agama/madhyama/MA_078.md
+++ b/01_agama/madhyama/MA_078.md
@@ -174,7 +174,7 @@ Brahmā said to the Bhagavān, “Great sage, if you want to conceal your form, 
 48\. This was Brahmā’s invitation, Māra Pāpīyān’s opposition, and the Bhagavān’s subsequent teaching. This sūtra is therefore called “Brahmā’s Invitation to the Buddha.”
 {: #p48}
 
-49\. The Buddha spoke thus. The Brahmā and his retinue who heard what the Buddha taught rejoiced and approved.
+49\. This is what the Buddha said. The Brahmā and his retinue who heard what the Buddha taught rejoiced and approved.
 {: #p49}
 
 ---
