--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -245,7 +245,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 70\. “I do not see a time in the past when monks made such robes as they have for the monk Aniruddha. I do not see future or present monks making such robes as they have for the monk Aniruddha. What’s the reason for that? Here on this Salaḷa Peak, 800 monks have gathered with the Bhagavān to make robes for the monk Aniruddha. Such a monk as Aniruddha possesses great supernormal abilities, great majesty, great fortune, and great might.”
 {: #p70}
 
-71\. The Buddha spoke thus. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and approved.
+71\. This is what the Buddha said. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and approved.
 {: #p71}
 
 ---
