--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -237,7 +237,7 @@ The monks answered, “No, Bhagavān. Why is that? They won’t obtain fire by r
 
 
 
-67\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+67\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p67}
 
 ---
