--- a/01_agama/madhyama/MA_084.md
+++ b/01_agama/madhyama/MA_084.md
@@ -56,7 +56,7 @@ next: MA_085.html
 15\. “There are another three thorns: The thorn of desire, thorn of anger, and thorn of delusion. These three thorns have been eliminated by an arhat who has ended the contaminants. They’ve been recognized and their roots completely pulled out. They’ve been destroyed, never to grow again. This is the arhat’s lack of thorns, the arhat’s freedom from thorns, and the arhat’s lack of thorns and freedom from thorns.”
 {:#p15}
 
-16\. The Buddha spoke thus. Those monks who heard what the Buddha had taught rejoiced and approved.
+16\. This is what the Buddha said. Those monks who heard what the Buddha had taught rejoiced and approved.
 {:#p16}
 
 ---
