--- a/01_agama/madhyama/MA_098.md
+++ b/01_agama/madhyama/MA_098.md
@@ -183,7 +183,7 @@ next: MA_101.html
 54\. “If monks and nuns establish their minds with the correct abiding in the four abodes of mindfulness for the slightest moment and do so in the morning, they’ll surely ascend and advance by sunset. Doing so at sunset, they’ll surely ascend and advance in the morning.”
 {:#p54}
 
-55\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+55\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p55}
 
 ---
