--- a/01_agama/madhyama/MA_101.md
+++ b/01_agama/madhyama/MA_101.md
@@ -101,7 +101,7 @@ They answered, “No.”
 26\. “Suppose bad thoughts don’t arise when a monk attends to a sign that’s related to what’s skillful, bad thoughts don’t arise when he observes those thoughts as bad and dangerous, bad thoughts don’t arise when he doesn’t attend to those thoughts, bad thoughts don’t arise when he gradually reduces those thoughts with intentional acts, and bad thoughts don’t arise when he cultivates mind with mind, taking and subduing it. He can act freely then, thinking about what he wants to think about and not thinking about what he doesn’t want to think about. If a monk thinks about what he wants to think about and doesn’t think about what he doesn’t want to think about, this is a monk whose thought follows his intent, and he freely thinks about the path.”
 {:#p26}
 
-27\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+27\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p27}
 
 ---
