--- a/01_agama/madhyama/MA_127.md
+++ b/01_agama/madhyama/MA_127.md
@@ -36,7 +36,7 @@ And their verbal and mental deeds, too.\\
 Householder, they are excellent fields\\
 That yield great merits when given gifts.”
 
-8\. The Buddha spoke thus. The householder Anāthapiṇḍada and the monks who heard what he taught rejoiced and approved.
+8\. This is what the Buddha said. The householder Anāthapiṇḍada and the monks who heard what he taught rejoiced and approved.
 {:#p8}
 
 ---
