--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -205,7 +205,7 @@ Jātiśroṇa replied, “Indeed, Gautama! The parable of the elephant’s footp
 59\. The priest Jātiśroṇa said, “Bhagavān, I have known it. Sugata, I have understood it. Bhagavān, now I take refuge in the Buddha, the Dharma, and the Saṅgha of monks. Please, Bhagavān, accept me as a layman. From today until the end of my life, I’ll devote myself [to the precepts].”
 {:#p59}
 
-60\. The Buddha spoke thus. When the priest Jātiśroṇa and the wanderer Pilotika heard what the Buddha taught, they rejoiced and approved.
+60\. This is what the Buddha said. When the priest Jātiśroṇa and the wanderer Pilotika heard what the Buddha taught, they rejoiced and approved.
 {:#p60}
 
 ---
