--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -283,7 +283,7 @@ He answered, “No, Gautama.”
 71\. The heretic Sugandika then left home and trained on the path, was accepted fully, and became a monk. After leaving home, training on the path, being accepted fully, and knowing the Dharma, Sugandika became an arhat.
 {:#p71}
 
-72\. The Buddha spoke thus. When Venerable Sugandika heard what the Buddha taught, he rejoiced and approved.
+72\. This is what the Buddha said. When Venerable Sugandika heard what the Buddha taught, he rejoiced and approved.
 {:#p72}
 
 ---
