--- a/01_agama/madhyama/MA_200.md
+++ b/01_agama/madhyama/MA_200.md
@@ -283,7 +283,7 @@ The monks replied, “No, Bhagavān.”
 
 71\. “My teaching is well expressed, revealed, and disseminated, has nothing pointless, and spreads as it’s proclaimed, even up to the heavens. Thus is my teaching well expressed, revealed, and disseminated, has nothing pointless, and spreads as its proclaimed, even up to the heavens: If someone is faithful and happy with me, then at the end of their life they’ll be born in a good place like the others, with a remainder.”
 
-72\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+72\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p72}
 
 ---
