--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -276,7 +276,7 @@ That’s never been turned in the world before.’
 67\. “Five monks, this is the teaching of liberation without remainder. This is the teaching of the unsurpassed safety of <em>nirvāṇa</em> without illness. This is the teaching of the unsurpassed safety of <em>nirvāṇa</em> without old age … death … grief and sorrow … defilement.”
 {:#p67}
 
-68\. The Buddha spoke thus. Venerable Ānanda and the monks who heard what he taught rejoiced and approved.
+68\. This is what the Buddha said. Venerable Ānanda and the monks who heard what he taught rejoiced and approved.
 {:#p68}
 
 ---
