--- a/01_agama/madhyama/MA_017.md
+++ b/01_agama/madhyama/MA_017.md
@@ -73,7 +73,7 @@ Gāminī answered, “No, Bhagavān.”
 16\. “Again, Gāminī, there’s this garden terrace path, this ascending path, and this path to a good place. Gāminī, what is the garden terrace path, the ascending path, and the path to a good place? It refers to the noble eightfold path, which is right view … right samādhi. These are the eight. Gāminī, this is called the garden terrace path, the ascending path, and the path to a good place.”
 {: #p16}
 
-17\. The Buddha spoke thus. Gāminī and the monks who heard what the Buddha taught rejoiced and approved.
+17\. This is what the Buddha said. Gāminī and the monks who heard what the Buddha taught rejoiced and approved.
 {: #p17}
 
 ---
