--- a/01_agama/madhyama/MA_047.md
+++ b/01_agama/madhyama/MA_047.md
@@ -20,7 +20,7 @@ next: MA_048.html
 3\. “If a monk observes the precepts, he readily cultivates having no regrets … gladness … joy … calmness … happiness … samādhi … true seeing and true knowing … disenchantment … lack of desire … liberation. If he has liberation, he readily cultivates nirvāṇa.”
 {: #p3}
 
-4\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+4\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p4}
 
 ---
