--- a/01_agama/madhyama/MA_049.md
+++ b/01_agama/madhyama/MA_049.md
@@ -20,7 +20,7 @@ next: MA_050.html
 3\. “Suppose a monk pays respect to, observes well, and pays homage to others of the religious life. It’s possible for him to be well behaved. Being well behaved, it’s possible for him to possess learning. Being learned, it’s possible for him to possess the body of precepts. Possessing the body of precepts, it’s possible for him to possess the body of samādhi. Possessing the body of samādhi, it’s possible for him to possess the body of wisdom. Possessing the body of wisdom, it’s possible for him to possess the body of liberation. Possessing the body of liberation, it’s possible for him to see and know the body of liberation. Seeing and knowing the body of liberation, it’s possible for him to possess nirvāṇa.”
 {: #p3}
 
-4\. The Buddha spoke thus. Those monks who had heard what the Buddha taught rejoiced and approved.
+4\. This is what the Buddha said. Those monks who had heard what the Buddha taught rejoiced and approved.
 {: #p4}
 
 ---
