--- a/01_agama/madhyama/MA_050.md
+++ b/01_agama/madhyama/MA_050.md
@@ -20,7 +20,7 @@ next: MA_051.html
 3\. “Suppose a monk has paid respect to, well observed, and paid homage to others of the religious practice. It’s possible for him to be well behaved. Being well behaved, it’s possible for him to possess learning. Being learned, he’ll guard his faculties … guarding the precepts … have no regrets … gladness … joy … calmness … happiness … samādhi … true seeing and true knowing … disenchantment … lack of desire … liberation. Possessing liberation, it’s possible for him to possess nirvāṇa.”
 {: #p3}
 
-4\. The Buddha spoke thus. Those monks who had heard what the Buddha taught rejoiced and approved.
+4\. This is what the Buddha said. Those monks who had heard what the Buddha taught rejoiced and approved.
 {: #p4}
 
 ---
