--- a/01_agama/madhyama/MA_076.md
+++ b/01_agama/madhyama/MA_076.md
@@ -95,7 +95,7 @@ next: MA_077.html
 28\. It was only when the unsurpassed religious practice was finished that he accomplished and dwelt in his own knowledge, awakening, and direct experience. He truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ After knowing the Dharma, that venerable became an <em>arhat</em>.
 {: #p28}
 
-29\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+29\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p29}
 
 ---
